# indivisible-rs

./: .gitlab-ci.yml  Cargo.toml  README  README.md  TODO  indivisible.1  install  test.sh  uninstall
src/: main.rs  test.rs
