[package]
name = "indivisible"
version = "2.0.0"
authors = ["Nicolás Ortega Froysa <nicolas@ortegas.org>"]
description = "A rewrite of the Indivisible (now legacy) project, once written in C, now rewritten in Rust."
edition = "2018"
readme = "README"
license = "GPL-3.0"
keywords = ["primes", "math"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
